Aura Window Capture: Ensure capture callback is always run.

The capture callback must always be run, or eventually the capture
decision logic will think there are too many captures in-flight.  This
closes some "holes" in content::AuraWindowCaptureMachine where methods
exit early without running the callback.  This is a potential fix for
crbug 600031.

BUG=600031

Review URL: https://codereview.chromium.org/1913283004

Cr-Commit-Position: refs/heads/master@{#389867}

Former-commit-id: 47efd876604698bfebe78ef495d789148694f649